# ngas

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  ACKNOWLEDGMENTS  AUTHORS  BUGS  COPYRIGHT  Dockerfile  INSTALL  README  README.md  VERSION  boot.sh  build.sh  buildout.cfg  buildout.pcfitsio.cfg  buildout.py.cfg  create_venv.sh  docker-compose.yml  prepare_ngas_root.sh  startServer.sh  tox.ini
src/ngamsCClient/: .gitignore  MWA_ngamsArchiveClient.cpp  MWA_ngamsCClientLib.cpp  Makefile.am  Makefile.cc_only  Makefile.in  Makefile.standalone  README  __init__.py  configure.ac  ngams.h  ngamsArchiveClient.c  ngamsArchiveClient.h  ngamsArchiveClient.py  ngamsArchiveClientMan.doc  ngamsCClient.c  ngamsCClient.py  ngamsCClientGlobals.h  ngamsCClientLib.c  ngamsCClientLib.py  ngamsCClientMan.doc  ngamsCClientX.c  ngamsCClientXMan.doc  ngamsCrc32.c  ngamsFormatHdrFile.awk  ngamsMAN_PAGE_X.c  ngams_h.py  tar_cclient_only.sh
src/ngamsCClient/.svn/: entries
src/ngamsJClient/src/: Makefile.am  Makefile.in
src/ngamsTest/: .gitignore  Makefile  Makefile.am  Makefile.in  README  TODO  __init__.py  ngamsArchiveClientTest.py  ngamsArchiveCmdTest.py  ngamsArchiveStressTest.py  ngamsAuthorizationTest.py  ngamsCClientTest.py  ngamsCClientTestArchFromMem.c  ngamsCheckFileCmdTest.py  ngamsCloneCmdTest.py  ngamsConfigCmdTest.py  ngamsConfigHandlingTest.py  ngamsContainerTest.py  ngamsDataCheckingThreadTest.py  ngamsDbSnapShotTest.py  ngamsDiscardCmdTest.py  ngamsEmailNotificationTest.py  ngamsExitCmdTest.py  ngamsGenTestPlan.py  ngamsHelpCmdTest.py  ngamsIdleSuspensionTest.py  ngamsInitCmdTest.py  ngamsJanitorThreadTest.py  ngamsKillSrvDapi.py  ngamsLabelCmdTest.py  ngamsMIMEMultipartTest.py  ngamsOfflineCmdTest.py  ngamsOnlineCmdTest.py  ngamsPClientTest.py  ngamsRaiseEx_NGAMS_ER_DAPI_1.py  ngamsRegisterCmdTest.py  ngamsRemDiskCmdTest.py  ngamsRemFileCmdTest.py  ngamsRetrieveCmdTest.py  ngamsServerTest.py  (+25 more)
src/ngamsTest/CVS/: Entries  Repository
src/ngamsTest/ngamsTest/: .coveragerc  .gitignore  Makefile.am  ngamsArchiveClientTest.py  ngamsArchiveCmdTest.py  ngamsArchiveStressTest.py  ngamsAuthorizationTest.py  ngamsBBCPArchiveTest.py  ngamsCClientTest.py  ngamsCacheDelTest.py  ngamsCacheThreadTest.py  ngamsCheckFileCmdTest.py  ngamsCloneCmdTest.py  ngamsConfigCmdTest.py  ngamsConfigHandlingTest.py  ngamsContainerTest.py  ngamsDataCheckingThreadTest.py  ngamsDbSnapShotTest.py  ngamsDiscardCmdTest.py  ngamsEmailNotificationTest.py  ngamsExitCmdTest.py  ngamsGenTestPlan.py  ngamsHelpCmdTest.py  ngamsIdleSuspensionTest.py  ngamsInitCmdTest.py  ngamsJanitorThreadTest.py  ngamsKillSrvDapi.py  ngamsLabelCmdTest.py  ngamsMIMEMultipartTest.py  ngamsOfflineCmdTest.py  ngamsOnlineCmdTest.py  ngamsPClientTest.py  ngamsPawseyStageTest.py  ngamsQueryCmdTest.py  ngamsRegisterCmdTest.py  ngamsRemDiskCmdTest.py  ngamsRemFileCmdTest.py  ngamsRetrieveCmdTest.py  ngamsServerTest.py  ngamsSrvTestAfterDapiInvocation.py  (+27 more)
src/ngamsTest/ngamsTest.egg-info/: PKG-INFO  SOURCES.txt
src/ngamsTest/ref/: ngamsArchiveCmdTest_test_ArchivePushReq_1_1_ref  ngamsArchiveCmdTest_test_ErrHandling_1_5_ref  ngamsArchiveCmdTest_test_ErrHandling_2_1_ref  ngamsArchiveCmdTest_test_ErrHandling_3_1_ref  ngamsArchiveCmdTest_test_MainDiskSmallerThanRep_1_10_ref  ngamsArchiveCmdTest_test_MainDiskSmallerThanRep_1_11_ref  ngamsArchiveCmdTest_test_MainDiskSmallerThanRep_1_2_ref  ngamsArchiveCmdTest_test_MainDiskSmallerThanRep_1_3_ref  ngamsArchiveCmdTest_test_MainDiskSmallerThanRep_1_5_ref  ngamsArchiveCmdTest_test_MainDiskSmallerThanRep_1_6_ref  (+56 more)
src/ngamsTest/src/: SmallFile.fits  (+12 more)
(+2076 files in other folders)
